k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo@sha256:bf41aa48a1cc0ccc8e6071236acfc428b7110ec2cf14b47c8961bc472e2c7c61
          ports:
            - containerPort: 27017
          readinessProbe:
            exec:
              command: ["mongosh", "--quiet", "--eval", "db.runCommand('ping').ok"]
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 15
