k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domoticASW-server-service
spec:
  selector:
    app: domoticASW-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: discovery
      port: 30000
      targetPort: 30000
      protocol: UDP
  type: ClusterIP
